--- a/simple-grid.css
+++ b/simple-grid.css
@@ -31,7 +31,12 @@ table {
   border-collapse: collapse;
   width: 100%;
 }
+.total{
 
+ font-weight: 100;
+ display: flex;
+ justify-content: flex-end;
+}
 td {
   border-top: 1px solid rgb(109, 95, 95);
 }
